@@ -25,12 +25,15 @@ import java.util.List;
 import java.util.Map;
 
 import org.apache.solr.common.SolrException;
+import org.apache.solr.common.params.CollectionAdminParams;
 import org.apache.solr.common.util.Utils;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.data.Stat;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import static org.apache.solr.common.cloud.ZkStateReader.COLLECTION_DEF;
 
 /**
  * Interact with solr cluster properties
@@ -93,7 +96,8 @@ public class ClusterProperties {
   @SuppressWarnings("unchecked")
   public Map<String, Object> getClusterProperties() throws IOException {
     try {
-      return (Map<String, Object>) Utils.fromJSON(client.getData(ZkStateReader.CLUSTER_PROPS, null, new Stat(), true));
+      Map<String, Object> properties = (Map<String, Object>) Utils.fromJSON(client.getData(ZkStateReader.CLUSTER_PROPS, null, new Stat(), true));
+      return convertCollectionDefaultsToNestedFormat(properties);
     } catch (KeeperException.NoNodeException e) {
       return Collections.emptyMap();
     } catch (KeeperException | InterruptedException e) {
@@ -103,11 +107,42 @@ public class ClusterProperties {
 
   public void setClusterProperties(Map<String, Object> properties) throws IOException, KeeperException, InterruptedException {
     client.atomicUpdate(ZkStateReader.CLUSTER_PROPS, zkData -> {
-      if (zkData == null) return Utils.toJSON(properties);
+      if (zkData == null) return Utils.toJSON(convertCollectionDefaultsToNestedFormat(properties));
       Map<String, Object> zkJson = (Map<String, Object>) Utils.fromJSON(zkData);
-      boolean modified = Utils.mergeJson(zkJson, properties);
+      zkJson = convertCollectionDefaultsToNestedFormat(zkJson);
+      boolean modified = Utils.mergeJson(zkJson, convertCollectionDefaultsToNestedFormat(properties));
       return modified ? Utils.toJSON(zkJson) : null;
     });
+  }
+
+  /**
+   * See SOLR-12827 for background. We auto convert any "collectionDefaults" keys to "defaults/collection" format.
+   * This method will modify the given map and return the same object. Remove this method in Solr 9.
+   *
+   * @param properties the properties to be converted
+   * @return the converted map
+   */
+  static Map<String, Object> convertCollectionDefaultsToNestedFormat(Map<String, Object> properties) {
+    if (properties.containsKey(COLLECTION_DEF)) {
+      Map<String, Object> values = (Map<String, Object>) properties.remove(COLLECTION_DEF);
+      if (values != null) {
+        properties.putIfAbsent(CollectionAdminParams.DEFAULTS, new LinkedHashMap<>());
+        Map<String, Object> defaults = (Map<String, Object>) properties.get(CollectionAdminParams.DEFAULTS);
+        defaults.compute(CollectionAdminParams.COLLECTION, (k, v) -> {
+          if (v == null) return values;
+          else {
+            ((Map) v).putAll(values);
+            return v;
+          }
+        });
+      } else {
+        // explicitly set to null, so set null in the nested format as well
+        properties.putIfAbsent(CollectionAdminParams.DEFAULTS, new LinkedHashMap<>());
+        Map<String, Object> defaults = (Map<String, Object>) properties.get(CollectionAdminParams.DEFAULTS);
+        defaults.put(CollectionAdminParams.COLLECTION, null);
+      }
+    }
+    return properties;
   }
 
   /**
