@@ -106,6 +106,11 @@ Upgrade Notes
 * SOLR-12767: The min_rf parameter is no longer needed, Solr will always return the achieved replication factor (rf)
   in the response header.
 
+* SOLR-12827: The cluster wide defaults structure has changed from {collectionDefaults: {nrtReplicas : 2}} to
+  {defaults : {collection : {nrtReplicas : 2}}}.  The old format continues to be supported and can be read from
+  ZK as well as written using the V2 set-obj-property syntax but it is deprecated and will be removed in Solr 9.
+  We recommend that users change their API calls to use the new format going forward.
+
 New Features
 ----------------------
 
@@ -131,6 +136,10 @@ Other Changes
 * SOLR-12756: Refactor Assign and extract replica placement strategies out of it. Now, assignment is done with the help
   of a builder class instead of calling a method with large number of arguments. The number of special cases that had
   to be handled have been cut down as well. (shalin)
+
+* SOLR-12827: Migrate cluster wide defaults syntax in cluster properties to a nested structure. The structure has
+  changed from {collectionDefaults: {nrtReplicas : 2}} to {defaults : {collection : {nrtReplicas : 2}}}.
+  (ab, shalin)
 
 Bug Fixes
 ----------------------
